# sd-local-model-manager

./: .env  .gitignore  CLAUDE.md  PRD.md  README.md  environment.yml  package-lock.json  package.json
.superpowers/brainstorm/77-1774394797/: .server-stopped  color-theme.html  design-style.html  summary.html  typography.html
client/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/src/: App.vue  router.ts  style.css
client/src/api/: index.ts
docs/: PRD.md
frontend/: index.html
frontend/css/: base.css  components.css  layout.css  reset.css  variables.css
frontend/js/: api.js  main.js  router.js  selection.js  settings.js  virtual-scroll.js
server/: .gitignore  database.py  main.py  models.py  package-lock.json  package.json  pyproject.toml
server/prisma/: schema.prisma
server/prisma/migrations/20260319150415_init/: migration.sql
server/routers/: civitai.py  import_export.py  models.py  settings.py  tags.py
server/services/: civitai_api.py  downloader.py  hash.py  info_parser.py  preview.py  scanner.py
server/src/: index.ts
server/src/lib/: config.ts
server/src/routes/: download.ts  files.ts  models.ts  scan.ts  settings.ts  symlink.ts
server/src/services/: civitai.ts  downloader.ts  hasher.ts  scanner.ts  symlink.ts
server/src/websocket/: index.ts
server/tests/: conftest.py  test_civitai_api.py  test_civitai_api_router.py  test_database.py  test_downloader.py  test_hash.py  test_import_export.py  test_info_parser.py  test_models_api.py  test_preview.py  test_scanner.py  test_tags_api.py
(+26 files in other folders)
